--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SevillanasManeras</string>
+    <string name="open">Abrir menú</string>
+    <string name="close">Cerrar menú</string>
+
 </resources>
